Capítulo 2 - Estruturas de Decisão/Exercícios/.metadata/.plugins/org.eclipse.cdt.ui/Atividade_6.build.log
15:00:57 **** Incremental Build of configuration Debug for project Atividade_6 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\main.o" "..\\src\\main.c" 
..\src\main.c: In function 'main':
..\src\main.c:28:15: error: 'parcelas' undeclared (first use in this function)
  scanf("%d", &parcelas);
               ^
..\src\main.c:28:15: note: each undeclared identifier is reported only once for each function it appears in
..\src\main.c:17:6: warning: unused variable 'numero' [-Wunused-variable]
  int numero;
      ^

15:00:57 Build Failed. 1 errors, 1 warnings. (took 300ms)

